Started page for 2024

--- a/2023.md
+++ b/2023.md
@@ -1,10 +1,15 @@
----
-layout: page
-title: LogAMS 2024
----
+
+<h1 align="center">
+logAMS 2023
+</h1>
+
+<h1 align="center">
+Go to <a href="https://logams.github.io/">logAMS 2024</a>
+</h1>
+
 
 <p align="center">
-    <img src="./img/logAMS2024.jpg" alt="logAMS banner" width="800px"/>
+    <img src="./img/logAMS.jpg" alt="logAMS banner" width="800px"/>
 </p>
 
 <p align="center">
@@ -14,12 +19,12 @@ title: LogAMS 2024
 <a href="https://maps.app.goo.gl/8tT9rKREhpkXakK77">
     <img src="https://img.shields.io/badge/📍_Location-Amsterdam_NL-blue">
 </a>
-<img src="https://img.shields.io/badge/🗓️_Date_-November_25+26-blue">
+<img src="https://img.shields.io/badge/🗓️_Date_-November_29+30-blue">
 </p>
 
 
 <p align="center">
-Welcome to the website for <strong>logAMS</strong>, the Amsterdam meetup for the global <a href="https://logconference.org">LoG Conference</a>. Hosted by Elsevier & Vrije Universiteit Amsterdam on November 25 + 26, 2024.
+Welcome to the website for <strong>logAMS</strong>, the Amsterdam meetup for the global <a href="https://logconference.org">LoG Conference</a>. Hosted by Elsevier & Vrije Universiteit Amsterdam on November 29 + 30, 2023.
 </p>
 
 
@@ -39,12 +44,13 @@ The logAMS conference is a satellite event of the global LoG Conference, featuri
 
 ### Details
 
-* Meet-up on November 25 + 26, 2024.
+* Meet-up on November 29 + 30, 2023.
 * The event is **free** ✨ to attend.
 * Hosted by Elsevier at Radarweg 29a, 1043 NX Amsterdam. 
 * Coffee and lunch provided.
 
 
+<!--
 
 ## Agenda
 
@@ -53,20 +59,15 @@ By attending logAMS, you will have the opportunity to:
 * Network with fellow researchers, professionals, and enthusiasts in the community. 
 * Share your own research and insights during poster sessions and interactive discussions. 
 * Stay up-to-date with the latest trends and advancements in machine learning on graphs and geometry.
-
+-->
 
 ## Dates
 
-* October 22, 2024. Registration opens.
-* November 11, 2024. Registration closes. After this date we maintain a wait list and registrations are considered up to capacity. 
-* November 25 + 26, 2024. Conference.
-
+* October 10, 2023. Registration opens.
+* November 13, 2023. Registration closes. After this date we maintain a wait list and registrations are considered up to capacity. 
+* November 29 + 30, 2023. Conference.
 
 ## Schedule
-
-TBA
-<!--
-Last year's
 
 ### 29 November
 
@@ -106,10 +107,8 @@ Last year's
 | 16:00 - 17:00 |    Drinks   |    |
 | 17:00 - 18:00 | Keynote LoG | Kyle Cranmer  |
 
--->
-
 ## Registration
-Are you interested in attending logAMS? Please register with this [form]() -- link to be updated.
+Are you interested in attending logAMS? Please register with this [form](https://forms.gle/U6vNbG6SwYQ362278).
 
 ## Contact
 
@@ -119,12 +118,14 @@ For any inquiries or questions about logAMS, please feel free to get in touch wi
 ## Organisation ##
 * Michael Cochez 
 * Thom Pijnenburg
-* Taraneh Younesian
-* Selene Baez Santamaria
-* Romy vos
-* Elvin Isufi
-* Megha Khosla
-<!-- 
+* Dimitrios Alivanistos
+* Daniel Daza
+* Shujian Yu
+* Xander Wilcke
+* Taewoon Kim
+* Ruud van Bakel
+* Yannick Brunink
+
 <p align="center">
 <img src="./img/michael.jpg" alt="Michael Cochez" width="200px"/>
 <img src="./img/thom.jpg" alt="Thom Pijnenburg" width="200px"/>
@@ -135,7 +136,7 @@ For any inquiries or questions about logAMS, please feel free to get in touch wi
 <img src="./img/taewoon.png" alt="Taewoon Kim" width="200px"/>
 <img src="./img/ruud.png" alt="Xander Wilcke" width="200px"/>
 <img src="./img/yannick.png" alt="Yannick" width="200px"/>
-</p> -->
+</p>
 
 <p align="center">
     <img src="./img/logams-organisers-logo.jpg" alt="logams-organisers" width="800px"/>
